# raytracer

./: .gitignore  CMakeLists.txt  raytracer.sublime-project  scene.json
include/: bvh.hpp  color.hpp  image.hpp  light.hpp  material.hpp  math.hpp  mesh.hpp  object.hpp  ray.hpp  scene.hpp  shape.hpp  vertex.hpp
src/: box.cpp  bvh.cpp  image.cpp  light.cpp  main.cpp  math.cpp  mesh.cpp  scene.cpp  sphere.cpp  transformed_shape.cpp  triangle.cpp
